Add visual styling and content for all pages

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -4,8 +4,9 @@
 }
 
 .navbar-brand {
-	font-family: Slabo 27px;
-	font-size: 300%;
+	font-family: Reenie Beanie;
+	font-size: 400%;
+	margin-top: 10px;
 }
 
 .navbar.navbar-default .navbar-nav > li > a {
@@ -16,6 +17,9 @@
 .navbar {
 	background-color: #c7c5a7;
 	height: 100px;
+	margin-bottom: 0;
+	border: 0px;
+	border-radius: 0px;
 }
 
 .navbar.navbar-default .navbar-nav > li > a{
@@ -29,6 +33,18 @@
 .navbar-form {
 	margin-top: 25px;
 }
+
+.navbar .navbar-nav>.active>a, {
+	background-color: #c7c5a7;
+	color: #777;
+}
+
+.navbar .navbar-nav>li>a:hover, .navbar-default .navbar-nav > .active > a:hover {
+    color: white;
+    background-color: #b6b835;
+}
+
+
 
 
 /*-----------sticky footer-------------*/
@@ -67,14 +83,111 @@ html, body {
 	padding: 1em;
 }
 
-/*---------------------general-----------------*/
+.social-media {
+	float: left;
+}
+
+
+/*---------------------general---------------*/
 
 body { 
     margin: 0; 
+    text-align: center;
 } 
 
 h1 {
-    font-family: CODE Light;
-    text-align: center;
+    font-family: Roboto Slab;
+    font-size: 400%;
+    color: white;
+    padding: 10px;
+    border: solid 3px white;
+    display: inline-block; 
+    margin-top: 1em; 
+}
+
+.landing-page {
+	margin-top: .1em;
+}
+
+p {
+	font-family: Quicksand;
+	padding: 30px;
+	color: white;
+	font-size: 2em;
+	line-height: 1em;
+}
+
+h2 {
+	font-family: Reenie Beanie;
+    color: white;
+    font-size: 800%;
+    margin-top: 0;
+    padding-top: .5em;
+}
+
+h3 {
+	font-family: Reenie Beanie;
+    color: white;
     font-size: 400%;
 }
+
+.welcome {
+	border: solid 3px white;
+	color: white;
+	background-color: black;
+	font-size: 300%;
+    font-family: Roboto Slab;
+    padding: 20px;
+    margin-top: 4em;
+}
+
+.welcome:hover {
+	text-decoration: none;
+}
+
+
+.left {
+	padding-left: 30px;
+	text-align: left;
+}
+
+
+
+/*----------------images--------------------*/
+
+.index {
+    height: 95em;
+	background-image: url("maya_angelou.jpeg");
+	background-size: 100%;
+	background-repeat: no-repeat;
+}
+
+
+.new {
+    height: 60em;
+	background-image: url("joseph_conrad.jpg");
+    background-size: 100%;
+	background-repeat: no-repeat;
+}
+
+.blurb {
+    height: 100em;
+	background-image: url("emily_bronte.jpg");
+	background-size: 100%;
+	background-repeat: no-repeat;
+}
+
+.contact {
+    height: 55em;
+	background-image: url("library.jpeg");
+	background-size: 100%;
+	background-repeat: no-repeat;
+}
+
+.articles {
+    height: 55em;
+	background-image: url("ladder.jpeg");
+	background-size: 100%;
+	background-repeat: no-repeat;
+}
+
