--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<div class="contact">
+<h1>Contact</h1>
+<p class="black">It's a blog for writers, so if you have any questions, write...</p>
+
+<p>writerly@hotmail.com</p>
+</div>
