--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,11 @@
-<h1>The Writer's Blog</h1>
-<p></p>
+<div class="index">
 
+<h2>Writerly.</h2>
+
+<h1 class="landing-page">The Writer's Blog</h1>
+
+<h3>Feel. Write. Together.</h3>
+
+<a href="/articles" class="welcome">Come on in...</a>
+</div>
 
