--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,33 +1,23 @@
-<p id="notice"><%= notice %></p>
+<div class="articles">
 
 <h1>Articles</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th>Published</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<div class="container-fluid">
+  <div class="row">
     <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.name %></td>
-        <td><%= article.description %></td>
-        <td><%= article.image_url %></td>
-        <td><%= article.published %></td>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="col-md-4 col-xs-12 articles">
+        <%= image_tag(article.image_url, class: "img-responsive") %>
+        <a href="#"><h1><%= article.name %></h1></a>
+        <p><%= article.description %></p>
+      </div><!-- /col -->
     <% end %>
-  </tbody>
-</table>
+  </div>
+</div>  
 
-<br>
 
-<%= link_to 'New Article', new_article_path %>
+
+
+
+
+</div>
+
