--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,9 @@
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> <!--link to Bootstrap (for styling) before link to local custom style sheet-->
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Slabo_27px">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Reenie+Beanie">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Biryani">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -19,8 +19,8 @@
   </head>
 
   <body>
-    <div class="page-wrap">
-      <nav class="navbar navbar-default">
+<div class="page-wrap">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -30,16 +30,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Writerly.</a>
+      <a class="navbar-brand" href="/static_pages/index"">Writerly.</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Library <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Blurb</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Submit an article</a></li>
+        <li class="active"><%= link_to "Library", articles_path %></li>
+        <li><a href="/static_pages/about">Blurb</a></li>
+        <li><a href="/static_pages/contact">Contact</a></li>
+        <li><a href="/articles/new">Submit an article</a></li>
       </ul>
       <form class="navbar-form navbar-right">
         <div class="form-group">
@@ -51,28 +51,30 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-      <%= yield %>
+<%= yield %>
 
-    </div>
+</div>
 
     <footer>
       <div class="site-footer">
-        <a href="https://twitter.com/neochopper" class="fa-stack fa-lg" data-show-count="false">
-        <i class="fa fa-circle-o fa-stack-2x"></i>
-        <i class="fa fa-twitter fa-stack-1x"></i>
-      </a>
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-circle-o fa-stack-2x"></i>
-        <i class="fa fa-facebook fa-stack-1x"></i>
-      </span>
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-circle-o fa-stack-2x"></i>
-        <i class="fa fa-linkedin fa-stack-1x"></i>
-      </span>
-      <span class="fa-stack fa-lg">
-        <i class="fa fa-circle-o fa-stack-2x"></i>
-        <i class="fa fa-github-alt fa-stack-1x"></i>
-      </span>
+        <div class="social-media">
+          <a href="https://twitter.com/neochopper" class="fa-stack fa-lg" data-show-count="false">
+          <i class="fa fa-circle-o fa-stack-2x"></i>
+          <i class="fa fa-twitter fa-stack-1x"></i>
+          </a>
+          <span class="fa-stack fa-lg">
+          <i class="fa fa-circle-o fa-stack-2x"></i>
+          <i class="fa fa-facebook fa-stack-1x"></i>
+          </span>
+          <span class="fa-stack fa-lg">
+          <i class="fa fa-circle-o fa-stack-2x"></i>
+          <i class="fa fa-linkedin fa-stack-1x"></i>
+          </span>
+          <span class="fa-stack fa-lg">
+          <i class="fa fa-circle-o fa-stack-2x"></i>
+          <i class="fa fa-github-alt fa-stack-1x"></i>
+          </span>
+        </div> 
         <div class="copyright">&copy Writerly.com 2017</div>
       </div>
     </footer>
