--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,19 +59,19 @@
       <div class="site-footer">
         <div class="social-media">
           <a href="https://twitter.com/neochopper" class="fa-stack fa-lg" data-show-count="false">
-          <i class="fa fa-circle-o fa-stack-2x"></i>
+          <i class="fa fa-circle fa-stack-2x twitter"></i>
           <i class="fa fa-twitter fa-stack-1x"></i>
           </a>
           <span class="fa-stack fa-lg">
-          <i class="fa fa-circle-o fa-stack-2x"></i>
+          <i class="fa fa-circle fa-stack-2x facebook"></i>
           <i class="fa fa-facebook fa-stack-1x"></i>
           </span>
           <span class="fa-stack fa-lg">
-          <i class="fa fa-circle-o fa-stack-2x"></i>
+          <i class="fa fa-circle fa-stack-2x linkedin"></i>
           <i class="fa fa-linkedin fa-stack-1x"></i>
           </span>
           <span class="fa-stack fa-lg">
-          <i class="fa fa-circle-o fa-stack-2x"></i>
+          <i class="fa fa-circle fa-stack-2x github"></i>
           <i class="fa fa-github-alt fa-stack-1x"></i>
           </span>
         </div> 
