--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,6 +1,6 @@
 body {
   background-color: #fff;
-  color: #333;
+  color: #999;
   margin: 33px;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
@@ -27,8 +27,8 @@ a {
   }
 
   &:hover {
-    color: #fff;
-    background-color: #000;
+    color: #000;
+    background-color: transparent;
   }
 }
 
@@ -82,3 +82,8 @@ div {
 label {
   display: block;
 }
+
+.welcome {
+  color: white;
+}
+
