--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,6 +1,5 @@
 <div class="col-md-4 col-xs-12 articles">
     <%= image_tag(article.image_url, class: "img-responsive") %>
-    <a href="#"><h1><%= article.name %></h1></a>
-    <p><%= article.description %></p>
-    <p><%= link_to 'Read', article %></p>
+    <h3><%= article.title %></h3>
+    <p class="read-button"><%= link_to 'Read', article %></p>
  </div><!-- /col-->
