--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,23 +1,12 @@
-<div class="articles">
+<div class="artics">
 
-<h1>Articles</h1>
+<h1 class="articles-header">Articles</h1>
 
-<div class="container-fluid">
-  <div class="row">
-    <% @articles.each do |article| %>
-      <div class="col-md-4 col-xs-12 articles">
-        <%= image_tag(article.image_url, class: "img-responsive") %>
-        <a href="#"><h1><%= article.name %></h1></a>
-        <p><%= article.description %></p>
-      </div><!-- /col -->
-    <% end %>
-  </div>
-</div>  
+<br>
 
+<%= render @articles %>
 
-
-
+<br>
 
 
 </div>
-
