--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,10 +2,12 @@
 
 <h1>Contribute</h1>
 
-<p>Here at Writerly we think writing should be a little less angst and solitude and a lot more collaboration and community. We'd love to host your articles- from random musings to in-depth contemplations- as long as their focus is the wonderful world of writing! To post your own well-crafted masterpiece, simply use the form below and hit Create Article. Place the title of the article in the 'name' field and add the body of the article into the 'Description' field. Feel free to include a link to an image if you have one. (Pictures of fluffy wuffy pets are allowed, though frowned-upon)</p>
+<p>Here at Writerly, we think that writing should be a little less solitude and angst and a bit more collaboration and community. We'd love nothing more than to host your article here- anything from how you get your inspiration to where you like to write- as long as the focus is (you guessed it) on writing. Use the form below- just place the title in the box marked 'Title' and add the body of your article in the field marked 'Body'. Feel free to add an image by pasting in the url (pictures of fluffy-wuffy pets are allowed, but frowned upon).
+	
 
-<form class="left">
-  <%= render 'form', article: @article %>
-</form>
+</p>
+
+<%= render 'form', article: @article %>
+
 
 </div>
