--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,11 +1,14 @@
 <div class="index">
 
-<h2>Writerly.</h2>
+	<h2>Writerly.</h2>
 
-<h1 class="landing-page">The Writer's Blog</h1>
+	<h1 class="landing-page">The Writer's Blog</h1>
 
-<h3>Feel. Write. Together.</h3>
+	<h3>Feel. Write. Together.</h3>
 
-<a href="/articles" class="welcome">Come on in...</a>
+	<div class="enter">
+	  <a href="/articles">| Welcome |</a>
+	</div>
+
 </div>
 
