8 alter background-image links

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -189,7 +189,7 @@ p.read-button a:hover {
 
 .index {
     height: 95em;
-	background-image: url("maya_angelou.jpeg");
+	background-image: image-url("maya_angelou.jpeg");
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
@@ -197,28 +197,28 @@ p.read-button a:hover {
 
 .new {
     height: 70em;
-	background-image: url("joseph_conrad.jpg");
+	background-image: image-url("joseph_conrad.jpg");
     background-size: 100%;
 	background-repeat: no-repeat;
 }
 
 .blurb {
     height: 100em;
-	background-image: url("emily_bronte.jpg");
+	background-image: image-url("emily_bronte.jpg");
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
 
 .contact {
     height: 55em;
-	background-image: url("library.jpeg");
+	background-image: image-url("library.jpeg");
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
 
 .artics {
     height: 95em;
-	background-image: url("bookshop.jpg");
+	background-image: image-url("bookshop.jpg");
 	background-size: 100%;
 	background-repeat: no-repeat;
 }
